# GuitarOnline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT_CHECKPOINT.md  Dockerfile  README.md  docker-compose.alerting.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.test.yml  docker-compose.yml  index.html  pyproject.toml
.ai/: api_contracts.md  architecture.md  backend_rules.md  database_rules.md  domain_map.md  frontend_rules.md  infrastructure_rules.md  sensitive_areas.md  source_of_truth.md
.githooks/: pre-commit
alembic/: env.py
app/: main.py
docs/: ADMIN_API.md  DOMAIN_RULES.md  NOTIFICATIONS_INTEGRATIONS.md
ops/: admin_elevated_access_runbook.md  auth_rate_limit_proxy_runbook.md  production_hardening_checklist.md  release_checklist.md  secret_rotation_execution_report_2026-03-11.md  secret_rotation_playbook.md  secret_rotation_schedule.md
scripts/: admin_perf_baseline.py  admin_perf_probe.py  alertmanager_create_silence.ps1  alertmanager_expire_silence.ps1  alertmanager_fire_and_verify.ps1  alertmanager_fire_and_verify.py  alertmanager_fire_synthetic.ps1  bootstrap_admin.py  db_backup.ps1  db_restore.ps1  deploy_remote.sh  deploy_smoke_check.py  docker_cache_export.ps1  docker_cache_import.ps1  docker_warmup.ps1  elevated_account_audit.py  encode_env_base64.ps1  install_git_hooks.ps1  load_sanity.py  render_alertmanager_oncall_config.ps1  reset_test_smoke_pool.py  run_backup_schedule_remote.sh  run_deploy_smoke_remote.sh  run_elevated_account_audit_remote.sh  run_restore_rehearsal_remote.sh  run_rollback_drill_remote.sh  run_synthetic_ops_remote.sh  run_synthetic_retention_remote.sh  run_user_origin_audit_remote.sh  secret_guard.py  secret_rotation_dry_run.py  seed_demo_data.py  supply_chain_gate.py  synthetic_ops_check.py  synthetic_ops_retention.py  test_user_cleanup.py  update_github_secret_prod_env.ps1  user_origin_audit.py  validate_ops_configs.ps1  verify_backup_remote.sh  (+1 more)
tests/: integration_smoke_pool.py  test_admin_bookings_list.py  test_admin_kpi_overview.py  test_admin_kpi_sales.py  (+63 more)
(+185 files in other folders)
