[tool.poetry]
name = "guitaronline"
version = "0.1.0"
description = "Production-ready backend for Guitar Online school"
authors = ["GuitarOnline Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic = "^2.11.0"
pydantic-settings = "^2.7.1"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.26"
email-validator = "^2.3.0"
bcrypt = "4.0.1"
redis = "^6.0.0"
prometheus-client = "^0.22.1"
starlette = "^0.49.1"
pyjwt = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
